# WormHoles

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-multi-platform.yml
ComplexExample/: CMakeLists.txt  Main.cpp
Example1/: CMakeLists.txt  Main.cpp
Example2/: CMakeLists.txt  Main.cpp
IntegrationTests/: AsyncTests.h  CMakeLists.txt  Common.h  Main.cpp  QueuedTests.h  SyncTests.h
SimpleExample/: CMakeLists.txt  Main.cpp
UnitTests/: CMakeLists.txt  Main.cpp
UnitTests/worm/: Common.h  EventChannelTests.h  EventHandlerTests.h
UnitTests/worm/detail/: EventChannelQueueManagerTests.h  EventChannelQueueTests.h  RingBufferTests.h  SingletonTests.h  ThreadPoolTests.h
WormHoles/: CMakeLists.txt  ComplexSample.h  Main.cpp  SimpleSample.h  WormHoles.sln
WormHoles/WormHoles/: EventChannel.h  EventChannelQueue.h  EventChannelQueueManager.h  EventHandler.h  Main.cpp  Singleton.h  ThreadPool.h  WormHoles.vcxproj  WormHoles.vcxproj.filters
WormHoles/WormHoles/WormHoles/: EventChannel.h  EventChannelQueue.h  EventHandler.h  Singleton.h
WormHoles/worm/: EventChannel.h  EventHandler.h
WormHoles/worm/detail/: EventChannelQueue.h  EventChannelQueueManager.h  IEventChannelQueue.h  RingBuffer.h  Singleton.h  ThreadPool.h
WormHoles/worm/internal/: EventChannelQueue.h  EventChannelQueueManager.h  IEventChannelQueue.h  Singleton.h  ThreadPool.h
